# beattie

./: .flake8  .gitignore  README.md  bot.py  cat.py  config.py  config_schema.py  context.py  default.py  dev-requirements.txt  eddb.py  eddb_schema.json  eddb_schema.py  exceptions.py  help.py  japanese.py  main.py  mypy.ini  nsfw.py  osu.py  pyproject.toml  repl.py  requirements-dev.txt  requirements.txt  rpg.py  starwars.py  stats.py  to_sqlalchemy.py  wolfram.py  xkcd.py
beattie/: __main__.py  bot.py  config.py  context.py  help.py
beattie/cogs/: crosspost.py  default.py  dictionary.py  manage.py  nsfw.py  remind.py  rpg.py  saucenao.py  scryfall.py  stats.py  wolfram.py  xkcd.py
beattie/utils/: aioutils.py  checks.py  contextmanagers.py  converters.py  etc.py  genesys.py  paginator.py  type_hints.py
cogs/: cat.py  crosspost.py  default.py  dictionary.py  eddb.py  japanese.py  manage.py  nsfw.py  osu.py  remind.py  repl.py  rpg.py  saucenao.py  scryfall.py  stats.py  twitter.py  wolfram.py  xkcd.py
config/: example_config.toml  example_logins.toml
config/crosspost/: danbooru_example.toml  e621_example.toml  flaresolverr_example.toml  gelbooru_example.toml  hiccears_example.toml  imgur_example.toml  mastodon_example.toml  pixiv_example.toml  ygal_example.toml  (+2 more)
data/: mystery.webm  why.txt
schema/: config.py  crosspost.py  eddb.py  eddb_schema.json  remind.py
tests/: test_crosspost.py
utils/: aioutils.py  asyncqlio.py  checks.py  contextmanagers.py  converters.py  decorators.py  etc.py  exceptions.py  genesys.py  paginator.py  starwars.py  type_hints.py
(+45 files in other folders)
