[project]
name = "beattie"
version = "3.0"
dependencies = [
    "aiohttp",
    "asyncpg",
    "brotli",
    "discord-ext-menus",
    "discord.py[speed]",
    "httpx",
    "jishaku",
    "levenshtein",
    "lingua-language-detector",
    "lxml",
    "psutil",
    "python-dateutil",
    "recurrent",
    "tldextract",
    "toml",
    "uvloop; platform_system != 'Windows'",
    "tzdata; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = ["asyncpg-stubs", "black", "objgraph", "ruff", "types-lxml"]

[tool.pyright]
typeCheckingMode = "standard"
strictParameterNoneValue = false         # less ugly
reportIncompatibleMethodOverride = false # simply not useful
reportFunctionMemberAccess = false       # @group.command

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN401",
    "B008",
    "B027",
    "BLE001",
    "C901",
    "D",
    "INP001",
    "PGH003",
    "PGH004",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PLW2901",
    "PTH",
    "RUF013",
    "RUF021",
    "RUF023",
    "S101",
    "S113",
    "S311",
    "SIM105",
    "SIM108",
    "SLF001",
    "TID252",
]

[tool.ruff.lint.isort.sections]
discord = ["discord"]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "discord",
    "first-party",
    "local-folder",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["beattie*"]
